--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  http: ^0.12.0+1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  jaguar_jwt: ^2.1.6
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
