--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  fluttertoast : ^7.1.1
   jaguar_jwt: ^2.1.6
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
